# nix-utils

./: .gitignore  flake.nix
lib/: default.nix  helpers.nix
templates/c/: flake.nix
templates/go/: flake.nix
templates/haskell/: .gitignore  flake.nix  template.cabal
templates/haskell/src/: Main.hs
templates/python/: flake.nix
templates/rust/: .gitignore  flake.nix
templates/zig/: .envrc  .gitignore  build.zig  build.zig.zon  flake.nix
