cabal-version:         3.4
name:                  template -- FIX
version:               0.1.0.0
author:                _
maintainer:            _
build-type:            Simple

common common
  ghc-options:         -Wall
-- https://ghc.gitlab.haskell.org/ghc/doc/users_guide/exts/table.html
--  default-extensions:

executable template
  import:              common
  default-language:    GHC2024
  main-is:             Main.hs
  hs-source-dirs:      src/Template -- FIX
  other-modules:
    Module.Main
  build-depends: -- deps must be specified here and edited in flake to override
    base ^>=4.18.2.1

-- library
--  import:            common
--  exposed-modules:
--    Module.Main
--  other-modules:
--  autogen-modules:
--  other-extensions:
--  hs-source-dirs:    src/Template -- FIX
--  default-language:  GHC2024
